# ROBOTbyVikmaironJetsonNano2GB

./: Node.txt
mpu_6050_driver/: CMakeLists.txt
mpu_6050_driver/scripts/: imu_node.py
ros_dr_pkg/: CMakeLists.txt  package.xml
ros_dr_pkg/launch/: launch_file.launch
ros_dr_pkg/src/: publisherArduino.py  subscriberArduino.py
ros_dr_pkg/urdf/: robot_model.xacro
test_ros/: CMakeLists.txt  package.xml
test_ros/python_script/: publisher_node.py
